Learn Angular Material

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,3 @@
-<button mat-raised-button>{{title}}</button>
+<div>
+    <span [matBadge]="notifications" [matBadgeHidden]="notifications === 0" matBadgeOverlap="false" >Notifications</span>
+</div>
