--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,9 +1,13 @@
-button {
-    margin-right: 3rem;
-}
-
-div {
-    /* margin-right: 3rem; */
-    margin-left: 1rem;
-    margin-top: 1rem;
-}
+:host {
+    --content-padding: 10px;
+  }
+  header {
+    display: block;
+    height: 60px;
+    padding: var(--content-padding);
+    box-shadow: 0px 5px 25px var(--shadow-color);
+  }
+  .content {
+    padding: var(--content-padding);
+  }
+  
