--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,8 @@
-<div>
-    <span [matBadge]="notifications" [matBadgeHidden]="notifications === 0" matBadgeOverlap="false" >Notifications</span>
-</div>
+<main>
+  <header class="brand-name">
+    <img class="brand-logo" src="/assets/logo.svg" alt="logo" aria-hidden="true">
+  </header>
+  <section class="content">
+    <app-home></app-home>
+  </section>
+</main>
