--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,12 +1,21 @@
 :host {
     --content-padding: 10px;
   }
-  header {
-    display: block;
-    height: 60px;
+  
+  div{
     padding: var(--content-padding);
     box-shadow: 0px 5px 25px var(--shadow-color);
   }
+
+  a {
+    text-decoration: none; /* Remove default underline from links */
+    margin-right: 2%; /* Add some space between links */
+  }
+
+  .icons{
+    float:right;
+  }
+
   .content {
     padding: var(--content-padding);
   }
