--- a/frontend/src/app/book-details/book-details.component.html
+++ b/frontend/src/app/book-details/book-details.component.html
@@ -13,7 +13,7 @@
     </section>
 
     <section class="listing-apply">
-        <h2 class="section-heading">Apply now to live here</h2>
+        <h2 class="section-heading">Create a review</h2>
         <form [formGroup]="applyForm" (submit)="submitApplication()">
           <label for="first-name">First Name</label>
           <input id="first-name" type="text" formControlName="firstName">
@@ -23,6 +23,7 @@
   
           <label for="email">Email</label>
           <input id="email" type="email" formControlName="email">
+
           <button type="submit" class="primary">Apply now</button>
         </form>
       </section>
