--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -8,8 +8,8 @@
   }
 
   a {
-    text-decoration: none; /* Remove default underline from links */
-    margin-right: 2%; /* Add some space between links */
+    text-decoration: none; 
+    margin-right: 2%;
   }
 
   .icons{
