--- a/frontend/src/app/book-details/book-details.component.css
+++ b/frontend/src/app/book-details/book-details.component.css
@@ -61,7 +61,7 @@
   }
   @media (max-width: 1024px) {
     .listing-photo {
-      width: 100%;
-      height: 400px;
+      width: 50%;
+      height: 50%;
     }
   }
