--- a/frontend/src/app/book-details/book-details.component.html
+++ b/frontend/src/app/book-details/book-details.component.html
@@ -13,18 +13,27 @@
     </section>
 
     <section class="listing-apply">
-        <h2 class="section-heading">Create a review</h2>
-        <form [formGroup]="applyForm" (submit)="submitApplication()">
-          <label for="first-name">First Name</label>
-          <input id="first-name" type="text" formControlName="firstName">
-  
-          <label for="last-name">Last Name</label>
-          <input id="last-name" type="text" formControlName="lastName">
-  
-          <label for="email">Email</label>
-          <input id="email" type="email" formControlName="email">
+      <h2 class="section-heading">Create a review</h2>
 
-          <button type="submit" class="primary">Apply now</button>
-        </form>
-      </section>
+      <form>
+
+        <mat-form-field>
+          <mat-label>Firstname</mat-label>
+          <input matInput placeholder="Stefan">
+        </mat-form-field><br>
+        
+        <mat-form-field>
+          <mat-label>Lastname</mat-label>
+          <input matInput placeholder="Raileanu">
+        </mat-form-field><br>
+
+        <mat-form-field>
+          <mat-label>Comment</mat-label>
+          <textarea matInput ></textarea>
+        </mat-form-field><br>
+
+        <button mat-raised-button color="primary">Submit</button>
+      </form>
+      
+    </section>
 </article>
