--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <section>
     <form>
-      <input type="text" placeholder="Filter by city" #filter>
+      <input type="text" placeholder="Filter by book" #filter>
       <button class="primary" type="button" (click)="filterResults(filter.value)">Search</button>
     </form>
-  </section>
-  <section class="results">
-    <app-book-product
-     *ngFor="let bookProduct of filteredProductList"
-     [bookProduct]="bookProduct" >
-    </app-book-product>
-  </section>
+</section>
+<section class="results">
+  <app-book-product
+    *ngFor="let bookProduct of filteredProductList"
+    [bookProduct]="bookProduct" >
+    </app-book-product>   
+</section>
