--- a/frontend/src/app/book-product/book-product.component.css
+++ b/frontend/src/app/book-product/book-product.component.css
@@ -1,4 +1,5 @@
 .listing {
+    position: relative;
     background: var(--accent-color);
     border-radius: 30px;
     padding-bottom: 30px;
@@ -8,7 +9,7 @@
     padding: 10px 20px 0 20px;
   }
   .listing-photo {
-    height: 250px;
+    height: 500px;
     width: 100%;
     object-fit: cover;
     border-radius: 30px 30px 0 0;
@@ -27,3 +28,16 @@
     margin-left: 5px;
   }
   
+  button {
+    position: absolute;
+    bottom: 10px;
+  }
+  
+  #addToFavorite {
+    right: calc(10px + 70px); /* Adjust as needed based on the width of the longer button */
+    margin-left: 10px; /* Add margin between buttons */
+  }
+  
+  #buyButton {
+    right: 10px;
+  }
