--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <section>
     <form>
       <input type="text" placeholder="Filter by book" #filter>
-      <button class="primary" type="button" (click)="filterResults(filter.value)">Search</button>
+      <button  mat-raised-button color="primary" class="primary" type="button" (click)="filterResults(filter.value)">Search</button>
     </form>
 </section>
 <section class="results">
