--- a/frontend/src/app/shop-books/shop-books.component.css
+++ b/frontend/src/app/shop-books/shop-books.component.css
@@ -45,3 +45,14 @@
     font-weight: bold; /* Added font weight for emphasis */
     color: #7b00ff; /* Changed text color */
 }
+
+.buttons-container {
+  display: flex;
+  align-items: flex-end; /* Align buttons to the right */
+  position: relative; /* Position buttons relative to the product container */
+  bottom: 0; /* Align buttons to the bottom */
+  right: 0; /* Align buttons to the right */
+}
+.buttons-container button {
+  margin-left: 10px;
+}
