--- a/frontend/src/app/shop-books/shop-books.component.html
+++ b/frontend/src/app/shop-books/shop-books.component.html
@@ -11,13 +11,17 @@
             <a [routerLink]="['/details', bookProduct.book.id]">Learn More</a>
           </div>
         </div>
+        <div class="buttons-container">
+          <button mat-raised-button color="primary" (click)="decreaseCantity(bookProduct)"><mat-icon fontIcon="exposure_neg_1"></mat-icon></button>
+          <button mat-raised-button color="primary" (click)="increaseCantity(bookProduct)"><mat-icon fontIcon="exposure_plus_1"></mat-icon></button>
+        </div>
       </div>
     </div>
 
     <p class="total-container"> Total: {{ total }}</p>
 
     <a [routerLink]="['/shop/billing']">
-      <button class="proceed-button mat-raised-button" mat-raised-button color="primary">Proceed to Cart</button>
+      <button mat-raised-button color="primary">Proceed to Cart</button>
     </a>
-  </section>
+</section>
   
