Styling favorite and shop

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,6 +8,10 @@
     
     <div class="icons">
       
+      <a class="icon" [routerLink]="['/admin']">
+        <mat-icon fontIcon="warning" color="primary" matTooltip="Admin panel"></mat-icon>
+      </a>
+
       <a class="icon" [routerLink]="['/contactsupport']"> 
         <mat-icon fontIcon="contact_support" color="primary" matTooltip="Contact Support"></mat-icon>
       </a>
