--- a/frontend/src/app/favorite/favorite.component.html
+++ b/frontend/src/app/favorite/favorite.component.html
@@ -11,8 +11,8 @@
             </div>
         </div>
         <div class="buttons-container">
-            <button mat-raised-button color="primary" (click)="removeFavorite(bookProduct)">Remove</button>
-            <button mat-raised-button color="primary" (click)=addShop(bookProduct)>Buy</button>
+            <button mat-raised-button color="primary" (click)="removeFavorite(bookProduct)" matTooltip="Remove book">Remove</button>
+            <button mat-raised-button color="primary" (click)=addShop(bookProduct) matTooltip="Buy book">Buy</button>
         </div>
       </div>
     </div>
