--- a/frontend/src/app/book-details/book-details.component.css
+++ b/frontend/src/app/book-details/book-details.component.css
@@ -1,6 +1,6 @@
 .listing-photo {
-    height: 600px;
-    width: 50%;
+    height: 500px;
+    width: 400px;
     object-fit: cover;
     border-radius: 30px;
     float: right;
