--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -8,11 +8,7 @@
 
         <mat-form-field>
             <mat-label>Enter your email</mat-label>
-            <input matInput 
-                placeholder="pat@example.com" 
-                [formControl]="email"
-                (blur)="updateErrorMessage()" required>
-           
+            <input matInput placeholder="pat@example.com" [formControl]="email"(blur)="updateErrorMessage()" required>
             <mat-error *ngIf="email.invalid">{{errorEmail}}</mat-error>
         </mat-form-field><br>
     
@@ -26,9 +22,7 @@
 
         <mat-form-field>
             <mat-label>Confirm Password</mat-label>
-            <input matInput [type]="hide1 ? 'password' : 'text'" formControlName="confirmPassword" 
-                required>
-            
+            <input matInput [type]="hide1 ? 'password' : 'text'" formControlName="confirmPassword" required>
             <button mat-icon-button matSuffix (click)="hide1 = !hide1">
                 <mat-icon>{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
