Start basic connections

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -17,11 +17,11 @@
       </a>
       
       <a class="icon" [routerLink]="['/favorite']">
-        <mat-icon aria-hidden="true" fontIcon="favorite" color="primary" matTooltip="Favorite" [matBadge]="countFavorites"></mat-icon>
+        <mat-icon aria-hidden="false" fontIcon="favorite" color="primary" matTooltip="Favorite" [matBadge]="countFavorites"></mat-icon>
       </a>
       
       <a class="icon" [routerLink]="['/shop']">
-        <mat-icon aria-hidden="true" fontIcon="shopping_cart" color="primary" matTooltip="Shop" [matBadge]="countBooks" matBadgeOverlap="large"></mat-icon>
+        <mat-icon aria-hidden="false" fontIcon="shopping_cart" color="primary" matTooltip="Shop" [matBadge]="countBooks" matBadgeOverlap="large"></mat-icon>
       </a>
       
       <a class="icon" [routerLink]="['/login']">
