Local storage done

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
     
     <div class="icons">
       
-      <a  class="icon" [routerLink]="['/admin']">
+      <a *ngIf="username === 'admin'" class="icon" [routerLink]="['/admin']">
         <mat-icon fontIcon="warning" color="primary" matTooltip="Admin panel"></mat-icon>
       </a>
 
