--- a/frontend/src/app/billing/billing.component.html
+++ b/frontend/src/app/billing/billing.component.html
@@ -7,10 +7,11 @@
         <ng-template matStepLabel>Fill out your name</ng-template>
         <mat-form-field>
           <mat-label>Name</mat-label>
-          <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+          <input matInput [placeholder]="user.name" formControlName="firstCtrl" required>
         </mat-form-field>
+        <mat-error *ngIf="!isLogged">You must be logged</mat-error>
         <div>
-          <button mat-button matStepperNext>Next</button>
+          <button mat-button matStepperNext [disabled]="!isLogged">Next</button>
         </div>
       </form>
     </mat-step>
